[package]
name = "pixtend"
version = "0.1.0"
edition = "2021"

[dependencies]
deku = "0.17"
rppal = "0.19"
thiserror = "1.0"

[[example]]
name = "digital_outputs"
path = "examples/digital_outputs.rs"

[[example]]
name = "relay_outputs"
path = "examples/relay_outputs.rs"

[[example]]
name = "gpio_outputs"
path = "examples/gpio_outputs.rs"

[[example]]
name = "safe_mode"
path = "examples/safe_mode.rs"

[[example]]
name = "watchdog"
path = "examples/watchdog.rs"

[[example]]
name = "versions"
path = "examples/versions.rs"

[[example]]
name = "digital_inputs"
path = "examples/digital_inputs.rs"

[[example]]
name = "analog_inputs"
path = "examples/analog_inputs.rs"

[[example]]
name = "gpio_inputs"
path = "examples/gpio_inputs.rs"

[[example]]
name = "gpio_pullups"
path = "examples/gpio_pullups.rs"

[[example]]
name = "sensor_inputs"
path = "examples/sensor_inputs.rs"

[[example]]
name = "retain"
path = "examples/retain.rs"

[[example]]
name = "analog_outputs"
path = "examples/analog_outputs.rs"
